--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -12,3 +12,11 @@ requests>=2.31.0
 
 # NumPy for vector operations
 numpy>=1.24.0
+
+# Vector Database
+chromadb>=0.4.0
+
+# Document Processing
+PyPDF2>=3.0.0
+python-docx>=1.0.0
+pypandoc>=1.13.0
