Change underscore to underline in .env.example and load env properties to settings

--- a/back-end/.env.exsample
+++ b/back-end/.env.exsample
@@ -6,8 +6,9 @@ API_MODEL=DeepSeek-V3.1
 EMBEDDING_MODEL=baai-bge-m3
 
 Minio_ui_Url=https://bucket-ui.aiatisti.ir
-Minio-S3_Url=https://bucket.aiatisti.ir 
-Bucket-Name=pg-bucket
+Minio_S3_Url=https://bucket.aiatisti.ir
+Bucket_Name=pg-bucket
+
 User_Bucket=pg-user
 Password_Bucket=xCUHRFGdsfwe34rcfvdxsqaz
 
