--- a/front-end/ai-assistant-front/package.json
+++ b/front-end/ai-assistant-front/package.json
@@ -11,9 +11,12 @@
     },
     "dependencies": {
         "@superset-ui/embedded-sdk": "^0.1.3",
+        "@tailwindcss/vite": "^4.1.18",
         "axios": "^1.13.4",
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "react-router-dom": "^6.30.3",
+        "tailwindcss": "^4.1.18"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
@@ -21,6 +24,7 @@
         "@types/node": "^24.10.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^5.1.1",
         "eslint": "^9.39.1",
         "eslint-plugin-react-hooks": "^7.0.1",
