--- a/front-end/ai-assistant-front/.env.example
+++ b/front-end/ai-assistant-front/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=http://localhost:8080
 
 # You can change this to your backend API URL
-# For production: VITE_API_BASE_URL=https://your-api-domain.com/api
+# For production: VITE_API_BASE_URL=https://your-api-domain.com
