--- a/front-end/ai-assistant-front/package.json
+++ b/front-end/ai-assistant-front/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.13.4",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
+        "react-hook-form": "^7.71.1",
         "react-router-dom": "^6.30.3",
         "tailwindcss": "^4.1.18",
         "zod": "^3.22.4"
